RESOLVED FIXED 261721
REGRESSION(268090@main): WCBackingStore.h(61,31): warning: use 'template' keyword to treat 'decode' as a dependent template name
https://bugs.webkit.org/show_bug.cgi?id=261721
Summary REGRESSION(268090@main): WCBackingStore.h(61,31): warning: use 'template' key...
Fujii Hironori
Reported 2023-09-18 22:32:20 PDT
clang-cl reports the following warning for Windows port: > Source\WebKit\WebProcess\WebPage\wc/WCBackingStore.h(61,31): warning: use 'template' keyword to treat 'decode' as a dependent template name
Attachments
Fujii Hironori
Comment 1 2023-09-18 23:03:36 PDT
EWS
Comment 2 2023-09-18 23:07:46 PDT
Committed 268109@main (759a8e3ae115): <https://commits.webkit.org/268109@main> Reviewed commits have been landed. Closing PR #17901 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-09-18 23:08:19 PDT
Note You need to log in before you can comment on or make changes to this bug.