REGRESSION(268090@main): WCBackingStore.h(61,31): warning: use 'template' keyword to treat 'decode' as a dependent template name https://bugs.webkit.org/show_bug.cgi?id=261721

Unreviewed build fix for clang-cl Windows build.

* Source/WebKit/WebProcess/WebPage/wc/WCBackingStore.h:
(WebKit::WCBackingStore::decode): Use `template` keyword.

Canonical link: https://commits.webkit.org/268109@main